# swarm_show_gui

./: log_ballerina.csv  log_ballerina2.csv  log_devil.csv  log_hangloose.csv  log_karate.csv  main.py  plot_positions.py  pyproject.toml  show_results_20260408_133739.csv  show_results_20260408_134518.csv  show_results_20260408_135021.csv  show_results_20260408_135212.csv  show_results_20260408_135327.csv  show_results_20260408_135458.csv  show_results_20260408_135730.csv  show_results_20260408_135917.csv  show_results_20260408_140315.csv  show_results_20260408_140453.csv  show_results_20260424_102130.csv  show_results_20260424_102844.csv  show_results_20260424_103943.csv  show_results_20260424_104332.csv  show_results_20260424_104446.csv  show_results_20260424_104644.csv  show_results_20260424_105308.csv  show_results_20260424_142853.csv  show_results_20260424_144910.csv  show_results_20260424_153037.csv  show_results_20260424_154646.csv  show_results_20260427_083926.csv  show_results_20260427_084217.csv  show_results_20260427_084711.csv  show_results_20260427_085510.csv  show_results_20260427_105612.csv  show_results_20260427_110608.csv  show_results_20260427_111642.csv  show_results_20260427_115035.csv  show_results_20260427_115633.csv  show_results_20260427_145542.csv  show_results_20260427_150702.csv  (+9 more)
ballerina/: active_phase.csv  first_frame_colors.csv  landing_phase.csv  mad_config.yaml  takeoff_phase.csv
bezier/: bezier.py
cache/: 019fe56be4.json  01da0d9519.json  01dfc0429b.json
dinosaur/: active_phase.csv  first_frame_colors.csv  landing_phase.csv  (+2 more)
(+27 files in other folders)
