[project]
name = "swarm-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cflib2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyqt6>=6.11.0",
    "pyyaml>=6.0.3",
    "qasync>=0.28.0",
]

[tool.uv.sources]
cflib2 = { git = "https://github.com/bitcraze/crazyflie-lib-python-v2.git" }
